[gd_scene load_steps=6 format=2]

[ext_resource path="res://bg.png" type="Texture" id=1]
[ext_resource path="res://Basic Comical Regular NC.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/timer_label.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 29
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="main" type="Node2D"]

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="timer_label" type="Label" parent="."]
anchor_right = 1.0
margin_right = 512.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.772549, 0, 1 )
text = "\"00:00:00:00:00\""
align = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_start" type="Button" parent="."]
margin_left = 184.0
margin_top = 79.2509
margin_right = 319.0
margin_bottom = 119.251
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_stop" type="Button" parent="."]
margin_left = 184.0
margin_top = 152.0
margin_right = 319.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
text = "STOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_reset" type="Button" parent="."]
margin_left = 184.0
margin_top = 224.0
margin_right = 319.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btn_start" to="timer_label" method="_on_btn_start_pressed"]
[connection signal="pressed" from="btn_stop" to="timer_label" method="_on_btn_stop_pressed"]
[connection signal="pressed" from="btn_reset" to="timer_label" method="_on_btn_reset_pressed"]
